[package]
name = "ding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = [
    "brotli",
    "deflate",
    "gzip",
    "zstd",
    "rustls-tls",
    "native-tls-alpn",
] }
tokio = { version = "1.40.0", features = ["full"] }
